text: Revise and edit all notes

--- a/content/05.systems.md
+++ b/content/05.systems.md
@@ -1,4 +1,3 @@
-# Classification systems
 
 # Classification systems
 
@@ -35,7 +34,8 @@ The periodic table of cell types would differ across species.The table should be
 type with biological information, including organ system, cell morphology, cell abundance and the composition of its epigenome and transcriptome." --> You do not need a periodic table for that!
 
 
-Analogously, the periodic table of cell types could be used to predict a species’ missing cell types, based on the biological logic of development and differentiation. --> I was not able to think of a possible prediction. 
+"Analogously, the periodic table of cell types could be used to predict a species’ missing cell types, based on the biological logic of development and differentiation."
+I was not able to think of a possible prediction. 
 
 In general, they present a tree-like structure with supra classifications. It is a calling for standardization, although the analogy with a periodic table is useful as a toy model, but misleading. To start, there is no periodicity and there is no table. 
 
@@ -46,13 +46,14 @@ Talks about a periodic table of C. elegans, but does not build it.
 
 ## Universal Cell Type Identifier Based on Number Theory
 [@doi:10.1002/cyto.a.23346]
+
 ### Highlights
 
-The advent of high multiplexing technologies increased the complexity of the classifica- tion process and new tools are needed to support the organization of this knowledge. I propose a classification based on both prime numbers and the fundamental theorem of arithmetic.
+The advent of high multiplexing technologies increased the complexity of the classification process and new tools are needed to support the organization of this knowledge. I propose a classification based on both prime numbers and the fundamental theorem of arithmetic.
 
-CELL types are classified by the presence or absence of specific markers expressed intracellularly or at the cell surface.
+Cell types are classified by the presence or absence of specific markers expressed intracellularly or at the cell surface.
 
-Cells are additionally classified in hierarchical struc- tures where each level represents cells defined by the addition of successive layer of markers. These hierarchical structures may reflect haematopoiesis and, therefore, inform about the origin and differentiation pathway of the cells. Moreover, cell populations may be identified with different degree of resolution, that is, by an increasing number of markers all specific for a selected cell type.
+Cells are additionally classified in hierarchical structures where each level represents cells defined by the addition of successive layer of markers. These hierarchical structures may reflect haematopoiesis and, therefore, inform about the origin and differentiation pathway of the cells. 
 
 The marker is a quite well-defined concept: a given antibody recognizes a protein that is usually translated by a known RNA and transcribed by a known gene. On the contrary, the cell population is a vague concept.
 
@@ -60,17 +61,9 @@ The nonprime number 17662215891311 is factorized as 19 3 23 3 151 3 277 3 9832 t
 
 Nevertheless, both databases and ontologies are created subjectively without a systematic approach and rely on critical literature reading by expert in the field. Both systems require a clear definition of a cell population that is usually a name given by experts in the field.
 
-Each marker listed in the “CD Nomenclature 2015” was associated to a prime number according to a one to one relationship.
+Since sometimes cell types are defined as negative for certain markers, I propose to integrate this information by simply squaring the prime associated to the negative marker. A more detailed definition could be achieved for population defined as expressing a marker at a “medium”/ “low” level by simply cubing the prime. In any case, a unique natural number (UNN) will univocally define the population.
 
-Since sometimes cell types are defined as negative for certain markers, I propose to integrate this information by simply squaring the prime associated to the negative marker.
-
-A more detailed definition could be achieved for population defined as expressing a marker at a “medium”/ “low” level by simply cubing the prime.
-
-In any case, a unique natural number (UNN) will univocally define the population.
-
-The PPS assures unique name assumption (UNA) on the basis of a list of markers associated to a list of prime numbers.
-
-Nevertheless, I hope this manuscript will inspire the single cell community toward a standardization of cell type nomenclature based on the number theory.
+The PPS assures unique name assumption (UNA) on the basis of a list of markers associated to a list of prime numbers. Nevertheless, I hope this manuscript will inspire the single cell community toward a standardization of cell type nomenclature based on the number theory.
 
 ### Comments
 ## Title
