--- a/content/07.evolutionary.md
+++ b/content/07.evolutionary.md
@@ -35,7 +35,7 @@ Very good article, strong evolutionary perspective.
 ### Highlights
 Key to cell type identity are evolutionary changes in the ‘core regulatory complex’ (CoRC) of transcription factors, that make emergent sister cell types distinct, enable their independent evolution and regulate cell type-specific traits termed apomeres.
 
-Typically, cellular functions require the cooperation of biomolecules that constitute  cellular modules. Consequently, a cell type has been envisaged as expressing an assemblage of cellular modules that perform discrete subfunctions.
+Typically, cellular functions require the cooperation of biomolecules that constitute cellular modules. Consequently, a cell type has been envisaged as expressing an assemblage of cellular modules that perform discrete subfunctions.
 
 From an evolutionary perspective, similarity may arise for different reasons, not all of which reflect bona-fide cell type homology due to inheritance from a common precursor.
 
@@ -121,25 +121,23 @@ Homologous cell types between species (those cells that evolved from the same pr
 Photoreceptors in humans and worms harbour orthologous opsins. Stripes of striated muscle
 cells in various animals are composed of the same cytoskeletal proteins, which is indicative of homology.
 
-Molecular fingerprints allows us to
-identify homologous cell types over long evolutionary distances and thereby reconstruct systems such as the urbilaterian brain, eyes and immune system. 
+Molecular fingerprints allows us to identify homologous cell types over long evolutionary distances and thereby reconstruct systems such as the urbilaterian brain, eyes and immune system. 
 
-homologous cell types conserved over long evolutionary distances tend to exert distinct cellular functions
+Homologous cell types conserved over long evolutionary distances tend to exert distinct cellular functions.
 
 The precise order of branching in the typogenetic tree may still have to be refined at some positions, although the general degree of relatedness is well documented.
 
-The aim of comparative study of cell type characteristics is to elucidate the evo- lutionary diversification of cell types (cell typogenesis) by detecting the similarities and differences between them.
+The aim of comparative study of cell type characteristics is to elucidate the evolutionary diversification of cell types (cell typogenesis) by detecting the similarities and differences between them.
 
-Comparative genomics recently pinpointed some limitations of the cell type comparative approach revealing that important cell type-specific marker genes are often absent or strongly modified in fast-evolving species
+Comparative genomics recently pinpointed some limitations of the cell type comparative approach revealing that important cell type-specific marker genes are often absent or strongly modified in fast-evolving species.
 
-Homologous cell types between species implies that a similar precursor type existed in the last common ancestor of these species
+Homologous cell types between species implies that a similar precursor type existed in the last common ancestor of these species.
 
-Molecular studies now allow hormone and neuropeptide-secreting cell types of the hypothalamus and pituitary to be tracked from vertebrates to protochordates, annelids and insects
+Molecular studies now allow hormone and neuropeptide-secreting cell types of the hypothalamus and pituitary to be tracked from vertebrates to protochordates, annelids and insects.
 
 At least one type of blood cell already existed in urbilaterians.
 
-Regarding the vertebrate immune system, a recent microarray survey revealed that many genes
-are specifically shared between b- and T-lymphocytes, supporting their status as sister cell types (as compared with other cell types of the vertebrate immune system),
+Regarding the vertebrate immune system, a recent microarray survey revealed that many genes are specifically shared between B- and T-lymphocytes, supporting their status as sister cell types (as compared with other cell types of the vertebrate immune system),
 
 Vertebrate retina harbours two separate sets of sister cell types that have diversified from an ancient rhabdomeric and ciliary photoreceptor precursor type, respectively.
 
@@ -167,23 +165,17 @@ I like the retina as a model.
     
 ### Highlights
 
-"Duplication’’ (either by copying or by fission) happens at other levels of biological organization than gene duplication. Other novel traits originate as new combinations of existing traits, a process sometimes termed bricolage, or tinkering 
+"Duplication" (either by copying or by fission) happens at other levels of biological organization than gene duplication. Other novel traits originate as new combinations of existing traits, a process sometimes termed bricolage, or tinkering.
 
-In addition to duplication plus divergence, evolutionary novelties often originate as new combinations of existing genes, structures, or species.Whole gene networks are often co-opted to function in new contexts
+In addition to duplication plus divergence, evolutionary novelties often originate as new combinations of existing genes, structures, or species.Whole gene networks are often co-opted to function in new contexts.
 
 To what extent do co-duplicated genes respond to natural selection as a unit of interacting proteins rather than as individual genes? 
 
-Rods an cones duplicity theory was first supported by two morphological classes of vertebrate photoreceptor cells
+Rods an cones duplicity theory was first supported by two morphological classes of vertebrate photoreceptor cells.
 
-Linear perspective:
+Linear perspective on the origin of rods and cones is that a subset of one cell type gradually transformed into another cell type. That vertebrate cones are more ancient than rods.
 
-One perspective on the origin of rods and cones is that a subset of one cell type gradually transformed into another cell type.
-
-That vertebrate cones are more ancient than rods.
-
-Rods and cones may represent evolutionary duplicates or paralogs. The similarity of expressed protein components of cell types may support duplication of the cell types.
-
-The realization that rod and cone phototransduction pathways represent evolutionary duplicates suggests two areas for future work. 
+Rods and cones may represent evolutionary duplicates or paralogs. The similarity of expressed protein components of cell types may support duplication of the cell types. The realization that rod and cone phototransduction pathways represent evolutionary duplicates suggests two areas for future work. 
 
 1 - Was natural selection involved in the differentiation? To what extent does selection act on the entire biochemical pathway as compared to the individual genes? 
 
