--- a/content/09.opinion.md
+++ b/content/09.opinion.md
@@ -13,8 +13,9 @@ Michael Elowitz: Previous notions of cell type don’t always make sense. We sho
 
 Allon Klein: The concept of “cell type” is poorly defined, but useful. We focus on defining coordinates underlying “cell states.”\textbf{ Cell types have been defined by morphology, ontogeny, function, or molecular composition. No single attribute has served. Coherent patterns in single-cell data serve to define “cell states.” The hard work is relating cell states to “cell types.”.\textbf{We will also find cells that associate with two or more classical “cell types.” Cells rest on a continuum manifold of cell state, cell type divisions are artificial.
 
-Jay Shendure and Cole Trapnell : Slippery concept of “cell type.” Because its complete cell lineage history is known and extensively annotated with functional information, C. elegans. Develop methods and agree on principles that support a cellular taxonomy for C. elegans. 
-Ed Lein: The concept of “cell type” reduces complexity. A neuronal type could be a genetically encoded circuit element, while an elegant taxonomy should reflect cells’ developmental origin, connectivity, and function. \textbf{A testable definition of “cell type” is a set of cells with a common transcriptomic signature and low variation in other phenotypes (including connectivity).
+Jay Shendure and Cole Trapnell : Slippery concept of “cell type.” Because its complete cell lineage history is known and extensively annotated with functional information, C. elegans. Develop methods and agree on principles that support a cellular taxonomy for C. elegans.
+
+Ed Lein: The concept of “cell type” reduces complexity. A neuronal type could be a genetically encoded circuit element, while an elegant taxonomy should reflect cells’ developmental origin, connectivity, and function. A testable definition of “cell type” is a set of cells with a common transcriptomic signature and low variation in other phenotypes (including connectivity).
 
 Emma Lundberg and Matthias Uhlen: The definition of a cell type should be attributed to its specialized cellular function. Robust classification of a cell type needs  a systems level view of the cell's function.
 
@@ -28,7 +29,7 @@ James Eberwine: The functional cell type that is of most interest. Therefore, th
 
 Junhyong Kim: In biology, a classic “type” problem is “What is a species?”. Applying “closely resembling cells” is appealing but difficult. As found in systematics, a universally satisfying definition of types is not likely to be possible. What cellular properties are important? The properties relevant to the system-level roles of a cell.
 
-J. Christopher Love: To define a cell type requires first considering what a cell is.It samples its environment, and  responds to those inputs, modifying its “state” on a variety of timescales. Redefine the meaning of cell type to encompass dynamic landscapes.
+J. Christopher Love: To define a cell type requires first considering what a cell is. It samples its environment, and  responds to those inputs, modifying its “state” on a variety of timescales. Redefine the meaning of cell type to encompass dynamic landscapes.
 
 ### Comments
 
@@ -38,39 +39,39 @@ Lots of good points. Functional definitions seem to be really important. Discuss
     [@doi:10.1242/dev.178996]
     
 ### Highlights
+
 Questions:
-\begin{enumerate
-    \item  How can we define a cell type?
-    \item  What are the molecular mechanisms of cell identity?
-    \item  Can we compare cell types across
+-  How can we define a cell type?
+-  What are the molecular mechanisms of cell identity?
+-  Can we compare cell types across
 species and phyla?
-    \item How did cell types first originate?
-    \item  What computational methods can be used to study cell type biology?
+- How did cell types first originate?
+-  What computational methods can be used to study cell type biology?
 \end{enumerate
 
 Traditionally, a cell type is s a morphologically distinguishable entity that performs a specific function within an organism.
 
-In the placozoan Trichoplax adhaerens, there are around 50 cell transcriptional cell types, but only six morphological ones (Smith et al., 2014; Varoqueaux et al., 2018).
+In the placozoan Trichoplax adhaerens, there are around 50 cell transcriptional cell types, but only six morphological ones.
 
-Variations occur in scRNAseq data also due to variation of cell states (e.g. Stapel et al., 2017);
+Variations occur in scRNAseq data also due to variation of cell states;
 
-Tanay proposed the concept of ‘metacells’ (Baran et al., 2019 preprint), which captures cells that likely come from similar statistical distribution. Metacells can reflect cell types or cell states, small variation in secondary gene modules within bigger clusters, or transcriptional gradients.
+Tanay proposed the concept of ‘metacells’ which captures cells that likely come from similar statistical distribution. Metacells can reflect cell types or cell states, small variation in secondary gene modules within bigger clusters, or transcriptional gradients.
  
- (the identities of cells regarding) Cell types are not static: (the cells) go through developmental processes such as differentiation or may (have their programs) re-defined in regeneration and reprogramming. Barbara Treutlein studies these processes.
+The identities of cells regarding cell types are not static: the cells go through developmental processes such as differentiation or may have their programs re-defined in regeneration and reprogramming. Barbara Treutlein studies these processes.
  
- Arendt et al made a full-body cell atlas of \textit{Platynereis dumerilii. It currently combines whole-body imaging at the resolution of electron microscopy with single cell RNAseq data.
+Arendt et al made a full-body cell atlas of Platynereis dumerilii. It currently combines whole-body imaging at the resolution of electron microscopy with single cell RNAseq data.
  
- (Several talks focused on cell type evolution in vertebrates.)
+--> (Several talks focused on cell type evolution in vertebrates.)
  
- Allon Klein (Harvard University, USA) studies orthology between cell types through comparisons in pairs of model systems with different divergence times. He highlighted that, to study the evolution of cell states, it is essential to measure their similarity accurately.
+Allon Klein (Harvard University, USA) studies orthology between cell types through comparisons in pairs of model systems with different divergence times. He highlighted that, to study the evolution of cell states, it is essential to measure their similarity accurately.
  
- It is possible to identify conserved components of GRNs (gene regulatory networks). In larger evolutionary distances the homology of GRN components might be hindered by high sequence divergence.
+It is possible to identify conserved components of GRNs (gene regulatory networks). In larger evolutionary distances the homology of GRN components might be hindered by high sequence divergence.
  
 ### Comments
 
 Good assembly of research projects on the evolution of cell types.
 
- Concept of "‘Recombination’ between cell types" as a mechanism to form new cell types in the end highlights the notion of intersected cell types. As they inevitably overlap.
+Concept of "‘Recombination’ between cell types" as a mechanism to form new cell types in the end highlights the notion of intersected cell types. As they inevitably overlap.
  
 ## Function first: classifying cell types and circuits of the retina
     [@doi:10.1016/j.conb.2018.10.011]
@@ -79,16 +80,19 @@ Good assembly of research projects on the evolution of cell types.
 
 Here, we argue that functional information about retinal cells should be prioritized over other criteria. In total, the mammalian retina likely contains 100 neuron types alone. A scheme resulting from one criterion can be puzzlingly misaligned with a scheme resulting from another criterion.
 
-Are the genetically identified JAM-B cells therefore functionally of a single type, several distinct but regional types, or, perhaps, a spectrum of types? 
-DS RGCs are  well-defined and consistent in terms of function and circuitry, and  numerous genetic markers that label DS RGCs there is none that clearly captures the funcionally defined population of DS RGCs.
+Are the genetically identified JAM-B cells functionally of a single type, several distinct but regional types, or, perhaps, a spectrum of types? 
 
-Create useful, working definitions of cell types (nominal definitions) that aid in the project of identifying, studying, and exchanging knowledge about them. Second, once a classification scheme is completely developed, this can reveal the essential features of each cell type— their real definitions.
+DS RGCs are well-defined and consistent in terms of function and circuitry, and numerous genetic markers that label DS RGCs there is none that clearly captures the funcionally defined population of DS RGCs.
+
+Create useful, working definitions of cell types (nominal definitions) that aid in the project of identifying, studying, and exchanging knowledge about them. Second, once a classification scheme is completely developed, this can reveal the essential features of each cell type — their real definitions.
+
+--> The essentialist view resurfacing 40 years later, see  [@wikidata:Q41052480]
 
 From a practical standpoint, the usefulness of a given classification depends on the specific inquiry a scientist chooses to undertake: to understand the development of circuits, prioritizing a connectomic classification would be essential. To understand differences in evolutionary origin of cell types or their protein expression, an mRNA transcription profile-based classification may be more useful than one based on cell morphology.
 
 Should a cell type be divided into three types because of differences in gene expression, when the functional properties are observed to be the same for the stimulus set used?
 
-One example of well-aligned retinal classification schemes are Bipolar cells (BCs) of the mouse retina. Studies using functional, morphological or genetic criteria converge onto the same number of 14 bipolar cell types. There are 3 different type 5 BC ‘versions’ (types 5t, 5o and 5i). Interestingly, both morphologically and genetically, the type 5 BCs are very close together,
+One example of well-aligned retinal classification schemes are Bipolar cells (BCs) of the mouse retina. Studies using functional, morphological or genetic criteria converge onto the same number of 14 bipolar cell types. There are 3 different type 5 BC ‘versions’ (types 5t, 5o and 5i). Interestingly, both morphologically and genetically, the type 5 BCs are very close together.
 
 If gene expression or morphology is prioritized in classifying these cells, a popular criterion at the moment, then there are three cell types. However, one could argue that type 5 BCs should be considered one functional type for the time being until a clear functional/ circuit-level criterion can be used to divide them up.
 
@@ -109,7 +113,7 @@ Same cells, circuitry differences imply functional differences! But identical cu
 The final point of "In our view, an ideal classification approach may require utilizing a set of classification criteria depending on the hypothesis in question ." is quite the same of mine. 
 
 ## Defining cell types and states with single-cell genomics
-    \cite{trapnell2015defining
+    [@wikidata:Q26782737]
     
 ### Highlights
 
@@ -117,7 +121,7 @@ Human bodies are said to have 210 different types of cells. However, this taxono
 
 Perhaps, for example, “CD14+ monocytes” actually consist of multiple subpopulations that share CD14 expression in common. 
 
-In 1957, C.H. Waddington proposed a powerful metaphor for how differentiated cell types emerge from a single, totipotent cell (Waddington 1957). A dynamical systems view of the cell. A cell’s state at a given time as a point in “gene regulation space.” As the cell regulates gene expression during development, it moves through the space along a trajectory. The central question posed by Waddington is: Where will the cell end up?
+In 1957, C.H. Waddington proposed a powerful metaphor for how differentiated cell types emerge from a single, totipotent cell. A dynamical systems view of the cell. A cell’s state at a given time as a point in “gene regulation space.” As the cell regulates gene expression during development, it moves through the space along a trajectory. The central question posed by Waddington is: Where will the cell end up?
 
 Stuart Kauffmann theorized that not only can cell fate transitions be described by a dynamical system, but that what we think of as distinct cell types correspond to attractors of that system (Kauffman 1993). An attractor is a location in the state space of a dynamical system that will move toward and to which it will return if perturbed.
 
@@ -135,13 +139,11 @@ Super cool figure 1.
     
 ### Highlights
 
-New high-throughput, high-content cytometry and sequencing technologies. The resulting explosion in the number of distinct cell types being identified is challenging the current paradigm for cell type definition in the Cell Ontology
+New high-throughput, high-content cytometry and sequencing technologies. The resulting explosion in the number of distinct cell types being identified is challenging the current paradigm for cell type definition in the Cell Ontology.
 
-The Cell Ontology (CL). Two core relations – is\_a and develops\_from – with is\_a used to relate specific cell subtypes to a more general parent cell type, and develops\_from used to represent developmental cell lineage relationships.
+The Cell Ontology (CL). Two core relations – is_a and develops_from – with is_a used to relate specific cell subtypes to a more general parent cell type, and develops_from used to represent developmental cell lineage relationships.
 
-Masci et al. proposed a major revision to the CL using dendritic cells as the driving biological use case in 2008. cells were often experimentally-defined based on the expression of specific marker proteins on the cell surface.
-
-To capture additional information from the original multiple inheritance hierarchy, they used formally defined, property-specific relations, such as has\_- function, has\_disposition, realized\_in, and location\_of
+Masci et al. proposed a major revision to the CL using dendritic cells as the driving biological use case in 2008. Cells were often experimentally-defined based on the expression of specific marker proteins on the cell surface.
 
 Logically coherent asserted framework for defining cell types based on the expression levels of marker proteins. Diehl et al. applied this approach first to cell types of the hematopoietic system and then later to the full CL.
 
@@ -153,8 +155,6 @@ Population #18: Monocytes – a PBMC that expresses HLA-DR and CD14, and lacks C
 
 Population #19: Dendritic cell (DC) – a PBMC that expresses HLA-DR, and lacks CD14, CD19, and CD3
 
-Population #20: mDC2 – a dendritic cell that expresses CD141, and lacks CD123
-
 Monocyte - Morphology: Mononuclear cell, diameter, 14 to 20 μM, N/C ratio 2:1-1:1.
 Nucleus may appear in variety of shapes: round, kidney, lobulated, or convoluted. Fine azurophilic granules present; markers: CD11b (shared with other myeloid cells), human: CD14, mouse: F4/80-mid, GR1-low; location: Blood, but can be recruited into tissues; role or process: immune & tissue remodeling; lineage: hematopoietic, myeloid. Myeloid mononuclear recirculating leukocyte that can act as a precursor of tissue macrophages, osteoclasts and some populations of tissue dendritic cells.
 
@@ -164,11 +164,11 @@ The CL monocyte definition includes information about cellular and nuclear morph
 
 The definition of the CD14-positive monocyte is very close to the monocyte cells identified in the flow cytometry experiment in that they are CD14+, CD3- and CD19-. However, since CD20 expression was not evaluated in the panel, we cannot be absolutely certain if the experimental cells represent an exact match to the CL counterpart.
 
-even with semantic assertions of marker protein expression used to formally define cell types (Fig. 2c), exact matching is not possible
+Even with semantic assertions of marker protein expression used to formally define cell types (Fig. 2c), exact matching is not possible
 
-inconsistent use of experimentally reproducible criteria for cell type definition in CL. 
+Inconsistent use of experimentally reproducible criteria for cell type definition in CL. 
 
-\textbf{A solution to the partial marker problem is sorely needed. 
+``A solution to the partial marker problem is sorely needed.`` 
 
 A fundamental issue has also emerged in considering how to distinguish between discrete cell types and more fluid cell states.
 cells are constantly responding and adapting to changes in their environment by subtly changing their phenotypic states.
@@ -180,11 +180,11 @@ Matching cell populations identified using assay platforms focused on molecular 
 --> impossible without species-specificity
 --> impossible without mixing different classes in the same bag
 
-matching cell populations identified using overlapping but non-identical marker panels
+matching cell populations identified using overlapping but non-identical marker panels.
 
 --> technotype hierarchy
 
-Adding new cell populations being rapidly identified with these high-throughput assay platforms to a reference ontology in a timely fashion
+Adding new cell populations being rapidly identified with these high-throughput assay platforms to a reference ontology in a timely fashion.
 
 --> open, easy, non burocratic addition, Wikipedia like. Systems for error correction, but freedom to change and make mistakes. Wikidata.
 
@@ -201,27 +201,33 @@ distinguishing between truly discrete cell types and responsive cell states.
 
 
 Proposals:
+- Establish a new working group
+- Molecular phenotype-based definitions – The community should continue to focus cell type definitions in the CL on precisely describing the phenotype of the cells, molecular and otherwise, using a series of necessary and sufficient conditions expressed as logical axioms
+- CL - If independent validation is required, the CL developers should consider the establishment of a “CL provisional ontology” that could be used to hold provisional cell type assignments.
 
-\begin{itemize
-    \item Establish a new working group
-    \item Molecular phenotype-based definitions – The community should continue to focus cell type definitions in the CL on precisely describing the phenotype of the cells, molecular and otherwise, using a series of necessary and sufficient conditions expressed as logical axioms
-    \item CL - If independent validation is required, the CL developers should consider the establishment of a “CL provisional ontology” that could be used to hold provisional cell type assignments.
 --> An open system, like Wikidata, could store the data and cell types could be further classified into ontological levels.
-    \item Incomplete overlapping of assessed phenotypes
+
+- Incomplete overlapping of assessed phenotypes
+
 --> Similar to the peritype proposal, but with the clarification of the species-specificity. Watchout that the use of the word "monocyte" in the definition adds a dangerous layer of vagueness.
-    \item it will be critical to develop conventions for cell type naming and definition using data from transcriptional profiling experiments. For example, the 11 new cell types identified in Fig. 3 could be named by combining marker genes selectively expressed by the cells with the parent cell class and the context
+
+- it will be critical to develop conventions for cell type naming and definition using data from transcriptional profiling experiments. For example, the 11 new cell types identified in Fig. 3 could be named by combining marker genes selectively expressed by the cells with the parent cell class and the context
+
 --> Very good naming proposal for transcriptomics. A few points is that human readability is severely limited (not a problem for machines, though) and that this definition excludes cells from other contexts.
-    \item 10.Necessary and sufficient conditions
+
+- 10.Necessary and sufficient conditions
 --> Also, a rigorous definition.
-    \item Use ofnegative assertions through “lacks expression of”.
---> absence of property is also a property itself! Rigorous criteria, totally agree. 
-    \item .Cell type matching. implementation and use of the Friedman-Rafsky statistical test in the FlowMap-FR tool for cross- sample cell population matching from flow cytometry data
+
+- Use of negative assertions through “lacks expression of”.
+
+--> Absence of property is also a property itself! Rigorous criteria, totally agree. 
+
+- .Cell type matching. implementation and use of the Friedman-Rafsky statistical test in the FlowMap-FR tool for cross- sample cell population matching from flow cytometry data.
 --> simpler approach: assignment to a technotype, and then matching between studies based on the ontological network that links both concepts.
-    \item Cell types versus cell states - Our intuition is that there is a distinction between. The challenge is to come up with a coherent and consistent approach for making this distinction. We propose that the distinction relates to the stability and reversibility of the new cellular phenotype. 
+
+- Cell types versus cell states - Our intuition is that there is a distinction between. The challenge is to come up with a coherent and consistent approach for making this distinction. We propose that the distinction relates to the stability and reversibility of the new cellular phenotype. 
+
 --> If a cardiomiocyte does not contract when it is dividing, is it really a miocyte? Also, when you put reprogramming into account (as in the case of axolotls regeneration, for example), bona fide cell types lose their stability. 
-
-
-\end{itemize
 
 
 ### Comments
@@ -241,12 +247,10 @@ Robustness accross same species individuals answers: if the change is robust and
 Precise definition of general cell types implies a degree of vagueness. Subdiving a CL archetype into more specific cell types might be beneficial.
 
 ## Opinion: How to Define Cell Type
-Advances
-    \cite{citation
-    
-### Highlights
-  \url{https://www.the-scientist.com/opinion/opinion-how-to-define-cell-type-30668
+ [@url:https://www.the-scientist.com/opinion/opinion-how-to-define-cell-type-30668]
 
+### Highlights
+ 
 We now must wrestle with the question of how to define cell types.
 
 Single-cell experiments make it tempting to perform stratification after stratification to continually to identify types, but results in groupings that go far beyond “type” and into functionally irrelevant and arbitrary categories.
@@ -257,14 +261,13 @@ Cell state may be thought of as the phenotype that occurs when a cell changes an
 
 "fibroblast is still a fibroblast as it is dividing,"
 
-Once we begin to consider all of the subtle cell-to-cell variations, it becomes clear that the number of cell types is much greater than ever imagined. Molecular markers of cell type as the set of genes that are similarly expressed across all cells with identical function should be consistent across all states. Conversely, markers of cell state would be transient within a given cell type
+Once we begin to consider all of the subtle cell-to-cell variations, it becomes clear that the number of cell types is much greater than ever imagined. Molecular markers of cell type as the set of genes that are similarly expressed across all cells with identical function should be consistent across all states. Conversely, markers of cell state would be transient within a given cell type.
 
 There are also models that completely abolish the use of cell types and instead promote deriving a continuum along which all cells exist.
 
 A third option—one that has proven useful in other disciplines, such as species discrimination is a hierarchic taxonomic definition of cell type. This approach has been useful for many of the early cell-type identification papers as it supports classification across multiple layers of what can define a cell type
 
-As the tools to evaluate cellular heterogeneity continue to evolve, so too will the discussion over how to define the subtypes we are abl to identify.
-
+As the tools to evaluate cellular heterogeneity continue to evolve, so too will the discussion over how to define the subtypes we are able to identify.
 
 ### Comments
 
@@ -274,18 +277,20 @@ Again, tree view of cell types
 
 
 
-# Template 
 
 ## Defining cellular identity through network biology
 [@pmid:25485572]
+
 ### Highlights
-related question remains poorly defined: what is a ‘cell type’? In other words, by what criteria should we categorize cells into classes?
+
+Related question remains poorly defined: what is a ‘cell type’? In other words, by what criteria should we categorize cells into classes?
 
 Answering this question is not a mere academic exercise but has deep implications for both developmental biology and for engineering cell fate.
 
 Cells are typically categorized by their physiologic function: red blood cells transport oxygen and motor neurons transmit signals between skeletal muscle and the central nervous system.
 
-Gene regulatory networks (GRNs) determine both the steady-state transcriptional pro- file of a cell and its response to most per- turbations (e.g., stress, lack or surfeit of nutrients, disease, age, etc.)
-As the persis- tence of the starting cell type GRN was commonly found across cell engineering paradigms, learning how to overcome this barrier will be crucial.
+Gene regulatory networks (GRNs) determine both the steady-state transcriptional profile of a cell and its response to most perturbations (e.g., stress, lack or surfeit of nutrients, disease, age, etc).
+
+As the persistence of the starting cell type GRN was commonly found across cell engineering paradigms, learning how to overcome this barrier will be crucial.
 
 ### Comments
