--- a/content/10.elife.md
+++ b/content/10.elife.md
@@ -2,43 +2,27 @@
 ## Philosophy of Biology: Towards a classification of stem cells
     [@doi:10.1073/pnas.1900357116]
 ### Highlights
-Stem cells have traditionally been viewed as distinct from most other types of cells. 
 
-Tools of metaphysics to describe a classification scheme for stem cells, a philosophical analysis of ’stemness’.
+Stem cells have traditionally been viewed as distinct from most other types of cells. Tools of metaphysics to describe a classification scheme for stem cells, a philosophical analysis of ’stemness’. Specific markers may help to distinguish and sort stem cells.
 
 Discrete population of cells sitting at the apex of a hierarchy of irreversible cell differentiation
 
-Specific markers may help to distinguish and sort stem cells.
-
 Intestinal cells could replace the stem cells tasked with renewing the lining of the bowel. Hematopoietic stem cells cannot be understood out of their context.
 
-Stemness can be a ’categorical’ property,
-an intrinsic feature that is independent of any interaction with surrounding entities,
+Stemness can be a
+- ’categorical’ property, an intrinsic feature that is independent of any interaction with surrounding entities,
+- ’dispositional’ property, an intrinsic feature that only manifests upon interaction with external stimuli. For example, a fragile item only breaks on impact.
+- ’relational’ property that relies on the interaction between entities.
+- a ’systemic’ property, defined as an extrinsic characteristic that is provided and maintained by the system.
 
-Stemness can be a ’dispositional’ property, an intrinsic feature that only manifests upon interaction with external stimuli. For example, a fragile item only breaks on impact.
+Is stemness the same in cancers and their non-pathological counterparts?Does stemness remain the same type of property throughout disease progression?
+Is stemness the same type of property in all types of cancers of a particular tissue? 
 
-Stemness can also be a ’relational’ property
-that relies on the interaction between entities.
+Choosing to target either cancer stem cells, their niche, or both, relies on implicit pre-suppositions regarding stemness.
 
-Stemness can be a ’systemic’ property, defined as an extrinsic characteristic that is provided and maintained by the system.
-
-Is stemness the same in cancers and
-their non-pathological counterparts?
-
-Does stemness remain the same type of property throughout disease progression?
-
-Is stemness the same type of property
-in all types of cancers of a particular tissue? 
-
-\textbf{How stemness categorization may drive therapeutic choices
-
-Choosing to target either cancer stem cells, their niche, or both, relies on implicit pre- suppositions regarding stemness.
-
-Changes in the nature of stemness may
-require therapeutic adaptation. If changes in stemness are driving progression rather than resulting from it, therapeutic interventions that modulate stemness could also be beneficial.
+Changes in the nature of stemness may require therapeutic adaptation. If changes in stemness are driving progression rather than resulting from it, therapeutic interventions that modulate stemness could also be beneficial.
 
 Do they share some underlying characteristics that justify their biological clustering, or is ’stem cell’ just a convenient category to group cell types that are actually distinct? 
-
 
 ### Comments
 No images needed. 
@@ -55,11 +39,9 @@ Do they share some underlying characteristics that justify their biological clus
 How rigorous is the "stemness" criterion, when we have (at least) 4 different views of cell types? 
 
 ## Meta Research:Reader engagement with medical content on Wikipedia
-Abstract
-    \cite{maggio2020reader
+ [@wikidata:Q90109096]
 ### Highlights
- WikiProject Medicine (WPM).
-
+WikiProject Medicine (WPM).
 Faculty at several health professions schools teach courses on editing Wikipedia
 
 ### Comments
@@ -69,13 +51,13 @@ Faculty at several health professions schools teach courses on editing Wikipedia
     [@doi:10.7554/eLife.47014]
 ### Highlights
 
-Here we explore the use of this word (and derivatives like functional) in research papers about de novo gene birth.
+Here we explore the use of this word in research papers about de novo gene birth.
 
 Language influences how we communicate, how we think, and how we practice science.
 
 For most evolutionary biologists, function relates to selection. For most molecular geneticists and biochemists, it is associated with a molecule’s activity.
 
-There are those who argue function should mean why an entity does what it does  and those who argue it can also mean what an entity does.
+There are those who argue function should mean why an entity does what it does and those who argue it can also mean what an entity does.
 
 Only a small fraction of biologists are aware of the rhetorical context. Most scientific publications do not explicitly include a definition of ’function’.
 
@@ -87,23 +69,22 @@ Applied the constant comparative method of the grounded theory of social science
 
 Authors writing about the function of a molecular object were almost always describing one or more of the following properties of the object: Expression, Capacities, Interactions, Physiological Implications and Evolutionary Implications
 
-Separating these meanings from one another enables communicating with increased precision about what the findings are, helping to avvoid
-fallacious logical shortcuts such as ‘this protein is expressed therefore it is functional therefore it is under selection’.
+Separating these meanings from one another enables communicating with increased precision about what the findings are, helping to avoid fallacious logical shortcuts such as ‘this protein is expressed therefore it is functional therefore it is under selection’.
 
 Our proposed model provides a practical lexicon that maps to prevalent data generation and interpretation practices.
 
-The same instance of the word in the same sentence was most of the times (37/42 = 88\%) interpreted differently by our team members. 
+The same instance of the word in the same sentence was most of the times interpreted differently by our team members. 
 When the meaning of function is unspecified, the literature in this field of research can become confusing.
 
 16/42 (38\%) instances were assigned two or three meanings. This suggests that this one word is often used to mean different things, and that the plurality of function cannot be easily disentangled.
 
-In summary, our results provide quantitative support to previous assertions that the word function carries convoluted meanings that complicate the scientific conversation.
-
-The cultural diversity of readers effectively prevents a unique definition to be imposed in practice.
+In summary, our results provide quantitative support to previous assertions that the word function carries convoluted meanings that complicate the scientific conversation. The cultural diversity of readers effectively prevents a unique definition to be imposed in practice.
 
 We endorse qualifying the use of function or avoiding the word altogether. 
 
-We encourage researchers to refine the model, adapt it to other subfields of genomics and other types of biological objects (metabolites, \textbf{cell types, organs), and propose alternatives.
+We encourage researchers to refine the model, adapt it to other subfields of genomics and other types of biological objects (metabolites, cell types, organs) and propose alternatives.
+
+--> Nice! Calls for explicit definitions
 
 ### Comments
 Most scientific publications also do not explicitly include a definition of cell type. 
@@ -121,24 +102,21 @@ About 54 references.
 ## Philosophy of Biology: Philosophical bias is the one bias that science cannot avoid
     [@doi:10.7554/eLife.44929]
 ### Highlights
+’philosophical bias’. These are basic implicit assumptions in science about how the world is (ontology), what we can know about it (epistemology), or how science ought to be practiced (norms).
 
-’philosophical bias’. These are basic implicit assumptions in science about how the world is (ontology), what we can know about it (epistemology), or how science ought to be practiced (norms)
-
-Doing science without making any basic philo- sophical assumptions is impossible.
+Doing science without making any basic philosophical assumptions is impossible.
 
 Even if one does not believe that determinism or some other philosophical assumption is true in all situations, making such an assumption can still serve a purpose.
 
-Philosophical premise is implicitly accepted in our theories and methods, it becomes a philo- sophical bias.
-
+Philosophical premise is implicitly accepted in our theories and methods, it becomes a philosophical bias.
 
 It could be argued that treating a patient on the basis of what works best for a group is an example of the ecological fallacy; that is, of inferring from group to individual. 
 
-This inference is valid under a philo- sophical assumption called frequentism, accord- ing to which individual propensities are derived from statistical frequencies.
+This inference is valid under a philosophical assumption called frequentism, accord- ing to which individual propensities are derived from statistical frequencies.
 
 Explicating philosophical biases reveals competing perspectives .
 
-Philosophical biases can influence
-the evaluation of scientific results.
+Philosophical biases can influence the evaluation of scientific results.
 
 Awareness of the bias is a necessary premise for any argument of a theory is better.
 
@@ -154,7 +132,7 @@ Biological concepts – no matter how loosely defined – are always embedded in
 
 Does a reliance on big data change the very idea of biological discovery and what counts as biological knowledge? 
 
-Biology is notoriously fragmented in its meth- ods, goals, instruments and conceptual frame- works.
+Biology is notoriously fragmented in its methods, goals, instruments and conceptual frameworks.
 
 Philosophy  can help to confront some of the key challenges. One term may be used to refer to different processes, or different definitions may apply to the same term. This profound fragmentation, which philosophers call pluralism.
 
@@ -162,9 +140,9 @@ Databases need to be accessed through a common ‘query’ system. which termino
 
 The choice and definition of keywords used to classify and retrieve data matters enormously to their subsequent interpretation. 
 
-Acknowledge that no data are ’raw’ in the sense of being independent from human interpretation
+Acknowledge that no data are ’raw’ in the sense of being independent from human interpretation.
 
-Philosophers of science have argued that pluralism may be beneficial when attempting to extract knowledge about the highly complex and variable processes encountered in the life sciences (Dupre, 1993; Mitchell, 2003).
+Philosophers of science have argued that pluralism may be beneficial when attempting to extract knowledge about the highly complex and variable processes encountered in the life sciences.
 
 Biologists often have feelings of unease about the quality of data and metadata found in online databases, particularly when the relevant data- bases are not curated by experts in the specific field and/or organism.
 
@@ -173,7 +151,6 @@ Data are ’relational’: in other words, the objects that best serve as data c
 Access to original samples also provides a concrete point of contact between research traditions and approaches.
 
 Automated data analysis is an exciting prospect for biological discovery. Far from making human judgement unnecessary, the increasing power of computational algorithms requires a proportional increase in critical thinking.
-
 
 ### Comments
 
@@ -184,7 +161,8 @@ Multilabel, single concept definitions (such as in Wikidata) might satisfy some 
 All data produced is stained by human interpretation. That explicits the need to have good definitions for concepts in single-cell biology to benefit from the data, even in the "raw" format. 
 
 ## Philosophy of Biology: From primal scenes to synthetic cells
-    \cite{zwart2019philosophy
+    [@wikidata:Q64097538]
+    
 ### Highlights
 
 But what kind of entity would a synthetic cell really be? I assess this question from a philosophical perspective,
@@ -195,7 +173,7 @@ The object pole (that is, the synthetic cell) and the subject pole of the knowle
 
 Triangulation, which means that we need a third position fromwhich we can attempt to unravel the interaction between the subject and the object. Such a position may be provided by novels, movies or plays about the desire to create artificial life.
 
-‘synthetic biology’ had already been coined by Stephane Leduc  to refer to research which involved growing crystals in solutions to mimic and explore organic forms.
+‘Synthetic biology’ had already been coined by Stephane Leduc  to refer to research which involved growing crystals in solutions to mimic and explore organic forms.
 
 Goethe (explored the idea of creating life in  Faust. Also Mary Shelley (Frankenstein) via HG Wells (The Stolen Bacillus) up to contemporary writers.
 
