--- a/content/11.list.md
+++ b/content/11.list.md
@@ -1,6 +1,6 @@
-\chapter{lists of cell types
+# Lists of cell types
 
-# Ontologies
+## Ontologies
 
 The Cell Ontology : https://www.ebi.ac.uk/ols/ontologies/cl
 The Cell Line Ontology (related) : https://www.ebi.ac.uk/ols/ontologies/clo
@@ -10,7 +10,7 @@ CELLPEDIA: a repository for human cell information for cell studies and differen
 \url{https://academic.oup.com/database/article/doi/10.1093/database/bar046/468477
 further extended to current link: \url{https://stemcellinformatics.org/
 
-# General lists
+## General lists
 
 Terminologia Histologica:  https://www.sciencedirect.com.sci-hub.tw/science/article/abs/pii/S0940960218300748
 
