--- a/content/16.cytometry.md
+++ b/content/16.cytometry.md
@@ -11,9 +11,12 @@ Gates are either manually drawn using software such as FlowJo and FlowCore, or a
 We developed the SPADE approach to extract a hierarchy from high-dimensional cytometry data in an unsupervised manner.
 
 Flow cytometry data set from a mouse bone marrow sample. 
-Mature myeloid cells are charac- terized by expression of the surface antigen CD11b, whereas lymphoid cells are negative for this marker.
+
+Mature myeloid cells are characterized by expression of the surface antigen CD11b, whereas lymphoid cells are negative for this marker.
+
 Within the lymphoid population, B cells express B220 but not TCRβ, and conversely the majority of T cells express TCRβ but not B220. 
-Finally, mature TCRβ-expressing T-cells are characterized by mutually exclusive expression of CD4 or CD8
+
+Finally, mature TCRβ-expressing T-cells are characterized by mutually exclusive expression of CD4 or CD8.
 
 Next-generation mass cytometry technology currently provides simul- taneous measurement of 31 or more markers per cell. Such a capacity allows enough surface markers to delineate nearly all cell types in human hematopoiesis, as well as additional functional markers to study cellular response to perturbations. 
 
@@ -26,10 +29,6 @@ SPADE was able to cluster the NK cells without using NK-specific markers because
 TNF induction of phosphorylated MAPKAPK2 was observed in myeloid and NK cell types (Fig. 5a).
 
 This analysis demonstrates how SPADE can be used to map intracellular signal activation of functional markers across the landscape of human hematopoietic development.
-
-
-
-
 ### Comments
 
 
