--- a/content/14.philosophy.md
+++ b/content/14.philosophy.md
@@ -4,77 +4,31 @@
 
 This independence created by philosophical insight is—in my opinion— the mark of distinction between a mere artisan or specialist and a real seeker after truth. (Albert Einstein, Letter to Robert Thornton, 1944)
 
-present-day scientists often perceive philosophy as completely different from, and even antagonistic to, science.
+Present-day scientists often perceive philosophy as completely different from, and even antagonistic to, science.
 
-We argue here that, to the contrary, philosophy can have an important and pro- ductive impact on science
+We argue here that, to the contrary, philosophy can have an important and productive impact on science
 
-contribution can take at least four forms: the clarifica- tion of scientific concepts, the critical assessment of scientific assumptions or methods, the formulation of new concepts and theories, and the fostering of di- alogue between different sciences, as well as between science and society.
+Contribution can take at least four forms: the clarification of scientific concepts, the critical assessment of scientific assumptions or methods, the formulation of new concepts and theories, and the fostering of di- alogue between different sciences, as well as between science and society.
 
 Conceptual Clarification:
 
-The definition of stem cells is a prime example. Four different kinds of properties exist under the guise of stemness in current scientific knowledge (1).
+The definition of stem cells is a prime example. Four different kinds of properties exist under the guise of stemness in current scientific knowledge.
 
-critique of scientific assumptions:
+Critique of scientific assumptions:
 
-For example, a philosophical critique of the immune self–nonself framework (5) has led to two sig- nificant scientific contributions. First, it was the basis of the formulation of a novel theoretical framework, the discontinuity theory of immunity, which complements previous self–nonself and danger models by pro- posing that the immune system responds to sudden modifications of antigenic motifs (6).
+For example, a philosophical critique of the immune self–nonself framework has led to two significant scientific contributions. First, it was the basis of the formulation of a novel theoretical framework, the discontinuity theory of immunity, which complements previous self–nonself and danger models by proposing that the immune system responds to sudden modifications of antigenic motifs.
 
-contributed along with other philosophical approaches to the no- tion that every organism, far from being a genetically homogenous self, is a symbiotic community harboring and tolerating multiple foreign elements
+Contributed along with other philosophical approaches to the notion that every organism, far from being a genetically homogenous self, is a symbiotic community harboring and tolerating multiple foreign elements.
 
 Philosophy and science share the tools of logic, conceptual analysis, and rigorous argumentation. Yet philosophers can operate these tools with degrees of thoroughness, freedom, and theoretical abstraction that practicing researchers often cannot afford in their daily activities.
 
-But how in practice can we facilitate cooperation
-between researchers and philosophers? At first sight, the solution might seem obvious: each commu- nity should make a step toward the other. Yet
+But how in practice can we facilitate cooperation between researchers and philosophers? At first sight, the solution might seem obvious: each community should make a step toward the other.
 
 
 ### Comments
 
 
 # Template 
-
-## Toward Principles for the Design of Ontologies Used for Knowledge Sharing
-[@doi:10.1.1.89.5775]
-### Highlights
-
-Formal ontologies are viewed as designed artifacts, formulated for specific purposes and evaluated against objective design criteria.
-Selected design decisions are discussed, and alternative representation choices and evaluated against the design criteria.
-
-Knowledge-based systems pose special requirements for interoperability. Such systems operate on and communicate using statements in a formal knowledge representation. They ask queries and give answers. They take “background knowledge” as an input.
-
-A body of formally represented knowledge is based on a conceptualization: the objects, concepts, and other entities that are assumed to exist in some area of interest and the relationships that hold among them (Genesereth & Nilsson, 1987). Every knowledge base, knowledge-based system, or knowledge-level agent is committed to some conceptualization, explicitly or implicitly.
-
-An ontology is an explicit specification of a conceptualization.
-
-1. Clarity: An ontology should effectively communicate the intended meaning of defined terms. Definitions should be objective.
-
-Where possible, a complete definition (a predicate defined by necessary and sufficient conditions) is preferred over a partial definition (defined by only necessary or sufficient conditions). All definitions should be documented with natural language.
-
-2. Coherence: An ontology should be coherent: that is, it should sanction inferences that are consistent with the definitions.
-
-At the least, the defining axioms should be logically consistent. Coherence should also apply to the concepts that are defined informally, such as those described in natural language documentation and examples. If a sentence that can be inferred from the axioms contradicts a definition or example given informally, then the ontology is incoherent.
-
-3. Extendibility: one should be able to define new terms for special uses based on the existing vocabulary, in a way that does not require the revision of the existing definitions.
-
-4. Minimal encoding bias: The conceptualization should be specified at the knowledge level without depending on a particular symbol-level encoding. An encoding bias results when a representation choices are made purely for the convenience of notation or implementation.
-
-5. Minimal ontological commitment: An ontology should require the minimal ontological commitment sufficient to support the intended knowledge sharing activities. An
-
-Another apparent contradiction is between extendibility and ontological commitment. An ontology that anticipates a range of tasks need not include vocabulary sufficient to express all the knowledge relevant to those tasks (requiring an increased commitment to that larger vocabulary). An extensible ontology may specify a very general theory, but include the representational machinery to define the required specializations.
-
-A shared ontology need only describe a vocabulary for talking about a domain, whereas a knowledge base may include the knowledge needed to solve a problem or answer arbitrary queries about a domain.
-
-Do the anticipated applications need to reason about dates, publication events, authorship, and so forth? If not, why ask them to commit to these concepts in an ontology?
-One reason for introducing these entities is to be able to state integrity constraints about the data in the reference object
-
-We could, instead, insist that all dates be represented in some canonical form, such as day/month/year. However, this would be specifying a precision that may not be available in the data, and would vary over implemented systems. Since this commitment would follow from a particular format rather than from the conceptualization, it would be a kind of encoding bias.
-
-Why is this not an encoding bias? The commitment to a specific unit of measure might also seem to limit extendibility. Would an agent that works from a Chinese calendar be able to commit to an ontology based on the Western calendar? 
-
-We have described five general design criteria and have given detailed examples of the design of formal ontologies for knowledge sharing. In these case studies, we found several instances of encoding bias, ranging from prescriptions of numerical precision to implicit assumptions resulting from viewing a quantity as a magnitude/unit pair.
-
-The ontological commitment to a strong theory is justified for the sharing of valuable mathematical models. In the bibliography domain, the theory relating references, documents, people, publishers, and dates is weak. We could have imposed a stronger theory, for instance, describing a world where all authors have permanent, unique names and the month is always known for a conference paper. That would have been imposing more ontological commitment than is necessary to share the information. It would also be incoherent, since we know that these constraints do not hold in the world being modeled.
-
-In any case, an ontology is only a specification, and the utility of an ontology ultimately depends on the utility of the theory it represents.
-
 
 ### Comments
 
