--- a/content/06.domain.md
+++ b/content/06.domain.md
@@ -438,6 +438,33 @@ We would suggest that the functional roles played by various neurones do provide
 One word of caution should be added here. The hypothesis that groups of cells in different species occupy the same functional niche is not to be equated with the suggestion that these groups are homologous. The criteria for the establishment of homology are independent of (although they overlap with) the considerations involved in defining a functional niche. Groups of cells in different species could occupy the same functional niche as a result of either homology or homoplasy.
 
 
+## A Rose by Any Other Name... On ‘Naming of Neurones’ by Rowe and Stone
+[@wikidata:Q39790383]
+### Highlights
+It is argued here that descriptive terminology need not be either essentialist or undesirable and that the W, X, Y terminology is too confused with false associations to be satisfactory
+
+The concise, apt and mem? orable descriptive receptive field terminologies are more desirable in that they are operationally based and approximate the unit’s transfer function - the parameter most significant to the central nervous system in its information processing task; thus they are more suited for cross species comparison because of a probably boun? tiful source of functional hypotheses.
+
+They do assert that descriptive terminology implies essence and presumably must, therefore, be regarded as passé, but neither the assertion nor the implicit conclusion are obligatory.
+
+This view is now inherent in the literature and means that the X, Y terminology is confusing for some workers.
+
+No wonder the W, X, Y terminology became popular. But, as Huxley wrote, here we have: ‘The great tragedy of Science - the slaying of a beautiful hypothesis by an ugly fact.
+
+Rowe and Stone [1977] are not troubled by these associations; they regard the W, X, Y terminology as possessing the asset that its meaning may be frequently revised, thus taking advan? tage of both its flexibility and the patience of its followers.
+
+the ready changes of the W, X, Y terminology without overt redefinition recalls Humpty Dumpty: * “When I use a word” said Humpty Dumpty in rather a scornful tone, “it means just what I choose it to mean - neither more nor less”.’
+
+But are descriptive termi? nologies ‘essentialist’? Well, this is an instance where the legal concept of mens rea applies; such a nomenclature is essentialist if its user believes that it identifies essence but purely descriptive if he does not! A descrip? tive terminology thus need imply neither essence nor neglect of other fea? tures of a unit’s behavior.
+
+Thus, if there were N quality dimensions in use, the N-dimensional quan? titative description of all members of the sample population would be subjected to analysis in an N-dimensional quality-hyperspace in order to objectively determine whether obvious clustering occurs and the dimen? sions along which it is most prominent. Unless clustering enables efficient subdivision of the quality space, it is not justifiable to employ a unified terminology to replace the straightforward property list.
+
+It seems almost self-evident, however, that the very feature, the receptive field and its selective properties, which is employed by the central nervous system in processing visual information should form the basis of a unit classification rather than secondary fac? tors, such as destination and conduction velocity, or factors which under? line the mechanism of the receptive field, such as the form of the dendritic tree, cell soma size, and so on.
+
+--> Sentiu. 
+### Comments
+
+
 ## Title
 [@doi:]
 ### Highlights
